--- a/templates/back/dashboard.html
+++ b/templates/back/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "back/base.html" %}
 {% block content %}
-{% load static%}
+{% load staticfiles%}
 
 <body class="color">
     <header>
@@ -15,7 +15,7 @@
     <div class="jumbotron">
       <br><br>
       <br>
-      <img class="doctor" src="{% static 'back/image/breaking-news.gif' %} ">
+      <img class="doctor" src="{% staticfiles 'back/image/breaking-news.gif' %} ">
     <br><br><br>
     <h1>Berita&nbsp&&nbspLibrary</h1>
   </div>
