--- a/templates/artis.html
+++ b/templates/artis.html
@@ -1,29 +1,29 @@
-{%load static%}
+{%load staticfiles%}
 <div class="celebrities">
     <h4 class="sb-title">Spotlight Celebrities</h4>
     <div class="celeb-item">
-        <a href="#"><img src="{% static 'images/uploads/ava1.jpg' %} " alt="" width="70" height="70"></a>
+        <a href="#"><img src="{% staticfiles 'images/uploads/ava1.jpg' %} " alt="" width="70" height="70"></a>
         <div class="celeb-author">
             <h6><a href="#">Samuel N. Jack</a></h6>
             <span>Actor</span>
         </div>
     </div>
     <div class="celeb-item">
-        <a href="#"><img src="{% static 'images/uploads/ava2.jpg' %}" alt="" width="70" height="70"></a>
+        <a href="#"><img src="{% staticfiles 'images/uploads/ava2.jpg' %}" alt="" width="70" height="70"></a>
         <div class="celeb-author">
             <h6><a href="#">Benjamin Carroll</a></h6>
             <span>Actor</span>
         </div>
     </div>
     <div class="celeb-item">
-        <a href="#"><img src="{% static 'images/uploads/ava3.jpg' %}" alt="" width="70" height="70"></a>
+        <a href="#"><img src="{% staticfiles 'images/uploads/ava3.jpg' %}" alt="" width="70" height="70"></a>
         <div class="celeb-author">
             <h6><a href="#">Beverly Griffin</a></h6>
             <span>Actor</span>
         </div>
     </div>
     <div class="celeb-item">
-        <a href="#"><img src="{% static 'images/uploads/ava4.jpg' %}" alt="" width="70" height="70"></a>
+        <a href="#"><img src="{% staticfiles 'images/uploads/ava4.jpg' %}" alt="" width="70" height="70"></a>
         <div class="celeb-author">
             <h6><a href="#">Justin Weaver</a></h6>
             <span>Actor</span>
