--- a/templates/back/base.html
+++ b/templates/back/base.html
@@ -1,19 +1,19 @@
-{% load static %}
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
     <title> Responsiive Admin Dashboard | CodingLab </title>
-    <link rel="stylesheet" href="{% static 'back/css/inti.css' %}">
-    <link rel="stylesheet" href="{% static 'back/css/swiper1-bundle.min.css' %}">
+    <link rel="stylesheet" href="{% staticfiles 'back/css/inti.css' %}">
+    <link rel="stylesheet" href="{% staticfiles 'back/css/swiper1-bundle.min.css' %}">
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     
     <link rel="stylesheet" href="sweetalert2.min.css">
         <!-- CSS -->
-    <link rel="stylesheet" href="{% static 'back/css/artikelcard.css' %}">
-    <link rel="stylesheet" href="{% static 'back/css/bookhero.css' %}">
+    <link rel="stylesheet" href="{% staticfiles 'back/css/artikelcard.css' %}">
+    <link rel="stylesheet" href="{% staticfiles 'back/css/bookhero.css' %}">
     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -140,7 +140,7 @@
         <li>
       <div class="profile-details">
         <div class="profile-content">
-          <img src="{% static 'back/image/profile.jpg' %}" alt="profileImg">
+          <img src="{% staticfiles 'back/image/profile.jpg' %}" alt="profileImg">
         </div>
         <div class="name-job">
           {% if request.user.is_staff %}
@@ -190,7 +190,7 @@
 <script src="sweetalert2.min.js"></script>
 <script src="sweetalert2.all.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="{% static 'back/js/baru.js' %}"></script>
-<script src="{% static 'back/js/Chart.js'%}"></script>
+<script src="{% staticfiles 'back/js/baru.js' %}"></script>
+<script src="{% staticfiles 'back/js/Chart.js'%}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </html>
