--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load staticfiles %}
 <!DOCTYPE html>
 <!--[if IE 7]>
 <html class="ie ie7 no-js" lang="en-US">
@@ -27,14 +27,14 @@
 	<meta name="format-detection" content="telephone-no">
 
 	<!-- CSS files -->
-	<link rel="stylesheet" href="{% static 'css/plug.css' %} ">
-	<link rel="stylesheet" href="{% static 'css/herostyle1.css' %} ">
+	<link rel="stylesheet" href="{% staticfiles 'css/plug.css' %} ">
+	<link rel="stylesheet" href="{% staticfiles 'css/herostyle1.css' %} ">
 
 </head>
 <body>
 <!--preloading-->
 <div id="preloader">
-    <img class="logo" src="{% static 'images/logo1.png' %} " alt="" width="119" height="58">
+    <img class="logo" src="{% staticfiles 'images/logo1.png' %} " alt="" width="119" height="58">
     <div id="status">
         <span></span>
         <span></span>
@@ -142,7 +142,7 @@
 							<span></span>
 						</div>
 				    </div>
-				    <a href="index-2.html"><img class="logo" src="{% static 'images/logo1.png' %} " alt="" width="119" height="58"></a>
+				    <a href="index-2.html"><img class="logo" src="{% staticfiles 'images/logo1.png' %} " alt="" width="119" height="58"></a>
 			    </div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse flex-parent" id="bs-example-navbar-collapse-1">
@@ -286,10 +286,10 @@
 {% endif %}
 {% endfor %}
 
-<script src="{% static 'js/jquery.js' %} "></script>
-<script src="{% static 'js/plugins.js' %} "></script>
-<script src="{% static 'js/plugins2.js' %} "></script>
-<script src="{% static 'js/custom.js' %} "></script>
+<script src="{% staticfiles 'js/jquery.js' %} "></script>
+<script src="{% staticfiles 'js/plugins.js' %} "></script>
+<script src="{% staticfiles 'js/plugins2.js' %} "></script>
+<script src="{% staticfiles 'js/custom.js' %} "></script>
 <script src="sweetalert2.min.js"></script>
 <script src="sweetalert2.all.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
