--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block list %}
-{% load staticfiles %}
+{% load static %}
 <div class="hero user-hero">
 	<div class="container">
 		<div class="row">
@@ -22,7 +22,7 @@
 			<div class="col-md-3 col-sm-12 col-xs-12">
 				<div class="user-information">
 					<div class="user-img">
-						<a href="#"><img src="{% staticfiles 'images/uploads/fotoku.png' %} " alt=""><br></a>
+						<a href="#"><img src="{% static 'images/uploads/fotoku.png' %} " alt=""><br></a>
 					</div>
 				</div>
 			</div>
