--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block list %}
-{% load staticfiles %}
+{% load static %}
 <div class="slider movie-items">
 {% include 'trending.html'%}
 </div>
@@ -14,7 +14,7 @@
 			<div class="col-md-3">
                 <div class="sidebar">
                     <div class="ads">
-                        <img src="{% staticfiles 'images/uploads/ads1.png' %}" alt="" width="336" height="296">
+                        <img src="{% static 'images/uploads/ads1.png' %}" alt="" width="336" height="296">
                     </div>
                     {% include 'artis.html'%}
                 </div>
@@ -56,7 +56,7 @@
 					<div class="slider-nav-2 thumb-ft">
 						<div class="item">
 							<div class="trailer-img">
-								<img src="{% staticfiles 'images/uploads/trailer7.jpg' %} "  alt="photo by Barn Images" width="4096" height="2737">
+								<img src="{% static 'images/uploads/trailer7.jpg' %} "  alt="photo by Barn Images" width="4096" height="2737">
 							</div>
 							<div class="trailer-infor">
 	                        	<h4 class="desc">Wonder Woman</h4>
@@ -65,7 +65,7 @@
 						</div>
 						<div class="item">
 							<div class="trailer-img">
-								<img src="{% staticfiles 'images/uploads/trailer2.jpg' %} "  alt="photo by Barn Images" width="350" height="200">
+								<img src="{% static 'images/uploads/trailer2.jpg' %} "  alt="photo by Barn Images" width="350" height="200">
 							</div>
 							<div class="trailer-infor">
 	                        	<h4 class="desc">Oblivion: Official Teaser Trailer</h4>
@@ -74,7 +74,7 @@
 						</div>
 						<div class="item">
 							<div class="trailer-img">
-								<img src="{% staticfiles 'images/uploads/trailer6.jpg' %} " alt="photo by Joshua Earle">
+								<img src="{% static 'images/uploads/trailer6.jpg' %} " alt="photo by Joshua Earle">
 							</div>
 							<div class="trailer-infor">
 	                        	<h4 class="desc">Exclusive Interview:  Skull Island</h4>
@@ -83,7 +83,7 @@
 						</div>
 						<div class="item">
 							<div class="trailer-img">
-								<img src="{% staticfiles 'images/uploads/trailer3.png' %} " alt="photo by Alexander Dimitrov" width="100" height="56">
+								<img src="{% static 'images/uploads/trailer3.png' %} " alt="photo by Alexander Dimitrov" width="100" height="56">
 							</div>
 							<div class="trailer-infor">
 	                        	<h4 class="desc">Logan: Director James Mangold Interview</h4>	
@@ -92,7 +92,7 @@
 						</div>
 						<div class="item">
 							<div class="trailer-img">
-								<img src="{% staticfiles 'images/uploads/trailer4.png' %} "  alt="photo by Wojciech Szaturski" width="100" height="56">
+								<img src="{% static 'images/uploads/trailer4.png' %} "  alt="photo by Wojciech Szaturski" width="100" height="56">
 							</div>
 							<div class="trailer-infor">
 	                        	<h4 class="desc">Beauty and the Beast: Official Teaser Trailer 2</h4>	
@@ -101,7 +101,7 @@
 						</div>
 						<div class="item">
 							<div class="trailer-img">
-								<img src="{% staticfiles 'images/uploads/trailer5.jpg' %} "  alt="photo by Wojciech Szaturski" width="360" height="189">
+								<img src="{% static 'images/uploads/trailer5.jpg' %} "  alt="photo by Wojciech Szaturski" width="360" height="189">
 							</div>
 							<div class="trailer-infor">
 	                        	<h4 class="desc">Fast&Furious 8</h4>	
@@ -121,7 +121,7 @@
 		<div class="row ipad-width">
 			<div class="col-md-8">
 				<div class="ads">
-					<img src="{% staticfiles 'images/uploads/ads2.png' %} " alt="" width="728" height="106">
+					<img src="{% static 'images/uploads/ads2.png' %} " alt="" width="728" height="106">
 				</div>
 				<div class="title-hd">
 					<h2>Latest news</h2>
@@ -136,7 +136,7 @@
 				        <div id="tab31" class="tab active">
 				            <div class="row">
 				            	<div class="blog-item-style-1">
-				            		<img src="{% staticfiles 'images/uploads/blog-it1.jpg' %} " alt="" width="170" height="250">
+				            		<img src="{% static 'images/uploads/blog-it1.jpg' %} " alt="" width="170" height="250">
 				            		<div class="blog-it-infor">
 				            			<h3><a href="#">Brie Larson to play first female white house candidate Victoria Woodull in Amazon film</a></h3>
 				            			<span class="time">13 hours ago</span>
@@ -148,7 +148,7 @@
 				        <div id="tab32" class="tab">
 				           <div class="row">
 				            	<div class="blog-item-style-1">
-				            		<img src="{% staticfiles 'images/uploads/blog-it2.jpg' %} " alt="" width="170" height="250">
+				            		<img src="{% static 'images/uploads/blog-it2.jpg' %} " alt="" width="170" height="250">
 				            		<div class="blog-it-infor">
 				            			<h3><a href="#">Tab 2</a></h3>
 				            			<span class="time">13 hours ago</span>
@@ -160,7 +160,7 @@
 				        <div id="tab33" class="tab">
 				        	<div class="row">
 				            	<div class="blog-item-style-1">
-				            		<img src="{% staticfiles 'images/uploads/blog-it1.jpg' %} " alt="" width="170" height="250">
+				            		<img src="{% static 'images/uploads/blog-it1.jpg' %} " alt="" width="170" height="250">
 				            		<div class="blog-it-infor">
 				            			<h3><a href="#">Tab 3</a></h3>
 				            			<span class="time">13 hours ago</span>
