--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load public/static %}
 <!DOCTYPE html>
 <!--[if IE 7]>
 <html class="ie ie7 no-js" lang="en-US">
@@ -27,8 +27,8 @@
 	<meta name="format-detection" content="telephone-no">
 
 	<!-- CSS files -->
-	<link rel="stylesheet" href="{% static 'css/plug.css' %} ">
-	<link rel="stylesheet" href="{% static 'css/herostyle1.css' %} ">
+	<link rel="stylesheet" href="{% public/static 'css/plug.css' %} ">
+	<link rel="stylesheet" href="{% public/static 'css/herostyle1.css' %} ">
 
 </head>
 <body>
